<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/textViewTotal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#4CAF50"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textViewAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvAmt" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etAmt"
        android:inputType="text" />

    <TextView
        android:id="@+id/textViewPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvPax" />

    <EditText
        android:id="@+id/editTextPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etPax"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggleButtonSVS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ToggleButton" />

        <ToggleButton
            android:id="@+id/toggleButtonGST"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ToggleButton" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDisc" />

    <EditText
        android:id="@+id/editTextDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etDisc"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbCash" />

        <RadioButton
            android:id="@+id/radioButtonPayNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbPaynow" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/textViewTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSplit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:text="@string/btnSplit"
            android:textColorHighlight="#009688" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#F83C51"
            android:text="@string/btnReset" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/textViewSplit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

</LinearLayout>
